# EtherTime

./: .gitignore  .rsync-filter  README.md  analyze.py  log_search.py  machine_control.py  manage.py  pyproject.toml  run_orchestration.py  run_worker.py  scheduler.py  synchronize_repository.py
arduino/: pulse.c  pulse_rtcontrol.c  read_pin.py
arduino/analog_test/: analog_test.ino
arduino/pulse_difference_generator/: pulse_difference_generator.ino
deploy/: README.md  configure_node.sh  configure_petalinux.sh  schedule_backups.sh  start_server_tmux.sh
deploy/config/: README.md  chrony_template_failover_master.conf  chrony_template_master.conf  chrony_template_slave.conf  linuxptp_default.conf  linuxptp_template.conf  ptpd_default.conf  ptpd_template.conf  sptp_template_master.conf  sptp_template_slave.conf
doc/: .gitignore
doc/ethertime/: config.md  dependencies.md  (+1 more)
ptp_perf/: analyze.py  benchmark.py  cluster_restart.py  config.py  constants.py  machine.py  orchestrator.py  profile_add_missing_tags.py  profile_dump_raw_data.py  scheduler.py  synchronize_repository.py  util.py
src/: analyze.py  benchmark.py  cluster_restart.py  config.py  constants.py  machine.py  orchestrator.py  profile_add_missing_tags.py  profile_dump_raw_data.py  rpc_client.py  scheduler.py  synchronize_repository.py  util.py
test/: test_1_to_2_charts.py  test_config_interval_charts.py  test_interactive_timeseries_chart.py  test_key_metric_variance_charts.py  test_linuxptp_restart.py  test_load_charts.py  test_no_switch_chart.py  test_output_benchmark_profile_statistics.py  test_output_csv.py  test_timeseries_chart.py
(+232 files in other folders)
