[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptp-perf"
version = "0.1.0"
description = "Command line interface for creating PTP-Perf benchmarks"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: C++",
]
dependencies = [
    "rpyc==6.0.0",
    "pydantic==2.6.2",
    "pandas==2.2.1",
    "matplotlib==3.8.3",
    "scipy==1.12.0", # Only needed for analysis
    "natsort==8.4.0",
    "tinytuya==1.13.2",
]

[project.urls]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
